Add Add-Opens configuration to maven-jar-plugin